ISS-11-17-45 Initial Fix  Main Elements Alignment

--- a/styles/how-to-use-strensiq.css
+++ b/styles/how-to-use-strensiq.css
@@ -731,12 +731,13 @@
 		text-transform: uppercase;
 		margin-top: 6.5rem;
 		opacity: 1;
-		left: 4rem;
+		left: 0;
 		position: relative;
 	}
 
 	.hpp-how-touse-strensiq .hpp-dtc-m-hero .content {
 		margin-bottom: 10rem;
+		padding: 0 15px !important;
 	}
 }
 
